Archive2/46/69040f8cc1bd3e/output
g++ (GCC) 4.9.2
clang version 3.5.0 (tags/RELEASE_350/final 217394)
main.cpp:20:1: error: uninitialized const member 'text_descriptor::constNum'
 };
 ^
main.cpp:20:1: error: reference member of type 'const int &' uninitialized
};
^
main.cpp:14:22: note: uninitialized reference member is here
    const int       &constNum;
                     ^
main.cpp:20:1: note: in implicit initialization of array element 2 with omitted initializer
};
^
1 error generated.
